# GhostForge

./: .pre-commit-config.yaml  BOLT_CONTAINER.md  BOLT_INTEGRATION_LATEST.md  Boltfile.toml  Cargo.toml  Dockerfile.dev  Makefile  PKGBUILD  README.md  build.zig  build.zig.zon  docker-compose.yml
.github/workflows/: ci.yml
assets/desktop/: ghostforge.desktop
src/: bolt_integration.rs  cli.rs  config.rs  container.rs  display.rs  error.rs  game.rs  game_launcher.rs  graphics.rs  gui.rs  launcher.rs  lib.rs  main.rs  main.zig  performance.rs  prefix.rs  protondb.rs  utils.rs  vrr_monitor.rs  wine.rs  winetricks.rs
